--- a/views/forgot-pass.ejs
+++ b/views/forgot-pass.ejs
@@ -50,5 +50,6 @@
                 <p>Si ya tienes una cuenta haz <a href="/login">click aqui</a></p>
             </form>
         </main>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     </body>
 </html>
