--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
     </head>
     <body class="text-center">
         <main class="form-signin">
-            <form id="loginForm" action="/login" method="POST" >
+            <form id="loginForm" action="/login" method="POST">
                 <img
                     class="mb-4"
                     src="img/logo.svg"
@@ -58,10 +58,27 @@
                 <button class="w-100 btn btn-lg btn-primary" type="submit">
                     Iniciar Sesion
                 </button>
-                <a href="/register" type="button" >Registrarse</a>
-                <hr>
-                <p>Si olvidate tu contraseña has <a href="/forgot-pass">click aqui</a></p>
+                <a href="/register" type="button">Registrarse</a>
+                <hr />
+                <p>
+                    Si olvidate tu contraseña has
+                    <a href="/forgot-pass">click aqui</a>
+                </p>
             </form>
         </main>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <% if (alert) { %>
+            <script>
+                Swal.fire({
+                    title:'<%=alertTitle%>',
+                    text:'<%=alertMessage%>',
+                    icon:'<%=alertIcon%>',
+                    showConfirmButton:<%=showConfirmButton%>,
+                    timer:<%=timer%>,
+                }).then(()=>{
+                    window.location='/<%=ruta%>'
+                })
+            </script>
+        <% } %>
     </body>
 </html>
