Coment TODO'S in index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,8 @@
+<!--TODO header con un ancord (<a href="/login">Iniciar Sesion</a>)-->
+
+<!--TODO slider-->
+
+<!--TODO "Productos"-->
+
+<!--TODO footer-->
 <h1>Prueba index2</h1>
