Inicio y cierre de sesion terminados

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -89,7 +89,7 @@
                     text:'<%=alertMessage%>',
                     icon:'<%=alertIcon%>',
                     showConfirmButton:<%=showConfirmButton%>,
-                    timer:<%=timer%>,
+                    timer:<%=timer%>
                 }).then(()=>{
                     window.location='/<%=ruta%>'
                 })
