--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,3 +6,9 @@
 
 <!--TODO footer-->
 <h1>Prueba index2</h1>
+<% if (login) { %>
+    <h1>Username <%=username%></h1>
+    <a href="/logout">Cerrar Sesion</a>
+<% }else{ %>
+    <a href="/login">Iniciar Sesion</a>
+<%}%>
