--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Login</title>
+        <title>Register</title>
         <link href="css/bootstrap.min.css" rel="stylesheet" />
 
         <style>
@@ -24,76 +24,83 @@
         <link href="css/signin.css" rel="stylesheet" />
     </head>
     <body class="text-center">
-        <main class="form-signin">
-            <form id="registerForm" action="/register" method="POST" >
-                <img
-                    class="mb-4"
-                    src="img/logo.svg"
-                    alt=""
-                    width="80"
-                    height="67"
-                />
-                <h1 class="h3 mb-3 fw-normal">Registrarse</h1>
-                <div class="form-floating">
-                    <input
-                        type="text"
-                        class="form-control"
-                        id="floatingInput"
-                        name="username"
-                        placeholder="username"
+        <% if (!login) { %>
+            <main class="form-signin">
+                <form id="registerForm" action="/register" method="POST" >
+                    <img
+                        class="mb-4"
+                        src="img/logo.svg"
+                        alt=""
+                        width="80"
+                        height="67"
                     />
-                    <label for="floatingInput">Nombre de usuario</label>
-                </div>
-
-                <div class="form-floating">
-                    <input
-                        type="email"
-                        class="form-control"
-                        id="floatingInput"
-                        name="email"
-                        placeholder="email"
-                    />
-                    <label for="floatingInput">Correo electronico</label>
-                </div>
-                <div class="form-floating">
-                    <input
-                        type="password"
-                        class="form-control"
-                        id="floatingPassword"
-                        name="pass"
-                        placeholder="Password"
-                    />
-                    <label for="floatingPassword">Contraseña</label>
-                </div>
-                <div class="form-floating">
-                    <input
-                        type="password"
-                        class="form-control"
-                        id="floatingPassword"
-                        name="confirmPass"
-                        placeholder="Password"
-                    />
-                    <label for="floatingPassword">Confirma tu contraseña</label>
-                </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">
-                    Registrarse
-                </button>
-                <p>Si ya tienes una cuenta haz <a href="/login">click aqui</a></p>
-            </form>
-        </main>
-        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <% if (alert) { %>
+                    <h1 class="h3 mb-3 fw-normal">Registrarse</h1>
+                    <div class="form-floating">
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="floatingInput"
+                            name="username"
+                            placeholder="username"
+                        />
+                        <label for="floatingInput">Nombre de usuario</label>
+                    </div>
+    
+                    <div class="form-floating">
+                        <input
+                            type="email"
+                            class="form-control"
+                            id="floatingInput"
+                            name="email"
+                            placeholder="email"
+                        />
+                        <label for="floatingInput">Correo electronico</label>
+                    </div>
+                    <div class="form-floating">
+                        <input
+                            type="password"
+                            class="form-control"
+                            id="floatingPassword"
+                            name="pass"
+                            placeholder="Password"
+                        />
+                        <label for="floatingPassword">Contraseña</label>
+                    </div>
+                    <div class="form-floating">
+                        <input
+                            type="password"
+                            class="form-control"
+                            id="floatingPassword"
+                            name="confirmPass"
+                            placeholder="Password"
+                        />
+                        <label for="floatingPassword">Confirma tu contraseña</label>
+                    </div>
+                    <button class="w-100 btn btn-lg btn-primary" type="submit">
+                        Registrarse
+                    </button>
+                    <p>Si ya tienes una cuenta haz <a href="/login">click aqui</a></p>
+                </form>
+            </main>
+            <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+            <% if (alert) { %>
+                <script>
+                    Swal.fire({
+                        title:'<%=alertTitle%>',
+                        text:'<%=alertMessage%>',
+                        icon:'<%=alertIcon%>',
+                        showConfirmButton:<%=showConfirmButton%>,
+                        timer:<%=timer%>
+                    }).then(()=>{
+                        window.location='/<%=ruta%>'
+                    })
+                </script>
+            <% } %>
+        <% } else { %>
             <script>
-                Swal.fire({
-                    title:'<%=alertTitle%>',
-                    text:'<%=alertMessage%>',
-                    icon:'<%=alertIcon%>',
-                    showConfirmButton:<%=showConfirmButton%>,
-                    timer:<%=timer%>
-                }).then(()=>{
-                    window.location='/<%=ruta%>'
-                })
+                window.location='/';
             </script>
-        <% } %>
+        <%}%>
+        
     </body>
 </html>
