--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,179 @@
 <!--TODO "Productos"-->
 
 <!--TODO footer-->
-<h1>Prueba index2</h1>
-<% if (login) { %>
-    <h1>Username <%=username%></h1>
-    <a href="/logout">Cerrar Sesion</a>
-<% }else{ %>
-    <a href="/login">Iniciar Sesion</a>
-<%}%>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="img/logo.svg" alt="logo" width="150px" />
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Multimedia</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Cuentas
+                            </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li>
+                                <a class="dropdown-item" href="#">Compra</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="#">Vende</a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider" />
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="#">¡Quiero ser COUCH!</a
+                                    >
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" <% if (login) { %>
+                                <a href="#"><%=username%></a>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/logout">Cerrar Sesion</a
+                                    >
+                                </li>
+
+                                <% }else{ %>
+                                <a href="/login">Iniciar Sesion</a>
+                                    <%}%>
+                                        </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/register">Registrarme</a>
+                                </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                            <button class="btn btn-outline-success" type="submit">
+                            Search
+                        </button>
+                        </form>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <h1 class="border text-center">NOVEDADES</h1>
+    </div>
+
+    <div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/slider-1.jpg" class="d-block w-100" alt="banner-1" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>La batalla intergaláctica te espera</h5>
+                        <p>
+                            Ven y únete a la comunidad más grande de Dark Orbit en latinoamérica
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/slider-3.jpg" class="d-block w-100" alt="banner-3" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Juga con más de 20.000 players de tu región</h5>
+                        <p>
+                            Ingresa y busca lo que necesitas
+                        </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/slider-5.jpg" class="d-block w-100" alt="banner-5" />
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>No te quedes atrás</h5>
+                        <p>
+                            Consigue naves y equipamentos desde la primer a la última temporada
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span
+                        class="carousel-control-prev-icon"
+                        aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span
+                        class="carousel-control-next-icon"
+                        aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+        </div>
+    </div>
+
+    <a href="https://www.google.com/" class="btn btn-primary">Google</a>
+
+    <div class="container text-center d-flex justify-content-center align-items-center">
+        <div class="card" style="width: 18rem">
+            <img src="img/slider-2.jpg" class="card-img-top" alt="CanalYT" />
+            <div class="card-body">
+                <h5 class="card-title">YouTube Dark Orbit</h5>
+                <p class="card-text">
+                    Contamos con nuestro propio canal de YouTube dedicado 100% a tu juego favorito Dark Orbit. ¡Ven y visítanos!
+                </p>
+                <a href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw" class="btn btn-primary">YouTube Oficial DO</a
+                    >
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem">
+                <img
+                    src="img/slider-2.jpg"
+                    class="card-img-top"
+                    alt="CanalYT"
+                />
+                <div class="card-body">
+                    <h5 class="card-title">Facebook Fan Page</h5>
+                    <p class="card-text">
+                        ¡Ingresa a nuestra Fan Page en Facebook y comparte con
+                        la comunidad latinoamericana más grande de
+                        latinoamericana!
+                    </p>
+                    <a
+                        href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw"
+                        class="btn btn-primary"
+                        >Facebook Oficial DO</a
+                    >
+                </div>
+            </div>
+        </div>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"
+        ></script>
+    </body>
+</html>
