añadir los productos a las vistas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>PayTooWin</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -40,7 +40,7 @@
                                 class="nav-link active"
                                 aria-current="page"
                                 href="#"
-                                >
+                            >
                                 Home
                             </a>
                         </li>
@@ -88,10 +88,14 @@
                                 </li>
 
                                 <% }else{ %>
-                                
-                                <a href="/login" class="nav-link">Iniciar Sesion</a>
+
+                                <a href="/login" class="nav-link"
+                                    >Iniciar Sesion</a
+                                >
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/register">Registrarme</a>
+                                    <a class="nav-link" href="/register"
+                                        >Registrarme</a
+                                    >
                                 </li>
                                 <%}%>
                             </a>
@@ -210,9 +214,6 @@
                 </button>
             </div>
         </div>
-
-        <a href="https://www.google.com/" class="btn btn-primary">Google</a>
-
         <div
             class="container text-center d-flex justify-content-center align-items-center"
         >
@@ -230,7 +231,8 @@
                     </p>
                     <a
                         href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw"
-                        class="btn btn-primary"
+                        class="btn btn-danger"
+                        target="_blank"
                         >YouTube Oficial DO</a
                     >
                 </div>
@@ -250,8 +252,9 @@
                         latinoamericana!
                     </p>
                     <a
-                        href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw"
+                        href="https://www.facebook.com/gaming/ignaciosapbe"
                         class="btn btn-primary"
+                        target="_blank"
                         >Facebook Oficial DO</a
                     >
                 </div>
