Validacion del formulario SKU y Precio

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo.svg" alt="logo" width="150px" />
+                    <img src="img/logo.svg" alt="logo" width="150px" loading="lazy"/>
                 </a>
                 <button
                     class="navbar-toggler"
@@ -153,6 +153,7 @@
                             src="img/slider-1.jpg"
                             class="d-block w-100"
                             alt="banner-1"
+                            loading="lazy"
                         />
                         <div class="carousel-caption d-none d-md-block">
                             <h5>La batalla intergaláctica te espera</h5>
@@ -167,6 +168,7 @@
                             src="img/slider-3.jpg"
                             class="d-block w-100"
                             alt="banner-3"
+                            loading="lazy"
                         />
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Juga con más de 20.000 players de tu región</h5>
@@ -178,6 +180,7 @@
                             src="img/slider-5.jpg"
                             class="d-block w-100"
                             alt="banner-5"
+                            loading="lazy"
                         />
                         <div class="carousel-caption d-none d-md-block">
                             <h5>No te quedes atrás</h5>
@@ -222,6 +225,7 @@
                     src="img/slider-2.jpg"
                     class="card-img-top"
                     alt="CanalYT"
+                    loading="lazy"
                 />
                 <div class="card-body">
                     <h5 class="card-title">YouTube Dark Orbit</h5>
@@ -240,9 +244,9 @@
 
             <div class="card" style="width: 18rem">
                 <img
-                    src="img/slider-2.jpg"
+                    src="img/slider-6.jpg"
                     class="card-img-top"
-                    alt="CanalYT"
+                    loading="lazy"
                 />
                 <div class="card-body">
                     <h5 class="card-title">Facebook Fan Page</h5>
