--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>addProduct</title>
-</head>
-<body>
-    <h1><%=msg%></h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>addProduct</title>
+    </head>
+    <body>
+        <% if (alert) { %>
+        <script>
+            Swal.fire({
+                title: '<%=alertTitle%>',
+                text: '<%=alertMessage%>',
+                icon: '<%=alertIcon%>',
+                showConfirmButton: <%=showConfirmButton%>,
+                timer: <%=timer%>,
+            }).then(() => {
+                window.location = '/<%=ruta%>'
+            })
+        </script>
+        <% } %> 
+    </body>
 </html>
