--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
 </head>
+
 <body>
-    <% data.forEach(packet => { %>
-        <h5><%=packet.sku%></h5>
-        <h5><%=packet.name%></h5>
-        <h5><%=packet.description%></h5>
-        <h5><%=packet.price%></h5>
-        <h5><%=packet.partialDelete%></h5>
-    <% }) %>
+    <% if (login) { %>
+        <%- include('header',{login:login,username:username}); -%>
+            <% }else{ %>
+                <%- include('header',{login:login}); -%>
+                    <%}%>
+                        <% data.forEach(packet => { %>
+                            <h5>
+                                <%=packet.sku%>
+                            </h5>
+                            <h5>
+                                <%=packet.name%>
+                            </h5>
+                            <h5>
+                                <%=packet.description%>
+                            </h5>
+                            <h5>
+                                <%=packet.price%>
+                            </h5>
+                            <h5>
+                                <%=packet.partialDelete%>
+                            </h5>
+                            <% }) %>
 </body>
+
 </html>
