--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,90 +1,76 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Login</title>
-        <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-        <style>
-            .bd-placeholder-img {
-                font-size: 1.125rem;
-                text-anchor: middle;
-                -webkit-user-select: none;
-                -moz-user-select: none;
-                user-select: none;
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Login</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+        
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
             }
+        }
+    </style>
+    <link href="css/signin.css" rel="stylesheet" />
+</head>
 
-            @media (min-width: 768px) {
-                .bd-placeholder-img-lg {
-                    font-size: 3.5rem;
-                }
-            }
-        </style>
-        <link href="css/signin.css" rel="stylesheet" />
-    </head>
+<body class="text-center">
+    <% if (!login) { %>
+        <%- include('header',{login:login,username:username}); -%>
+            <main class="form-signin">
+                <form id="loginForm" action="/login" method="POST">
+                    <img class="mb-4" src="img/logo.svg" alt="logo" width="80" height="67" />
+                    <h1 class="h3 mb-3 fw-normal">Iniciar Sesion</h1>
 
-    <body class="text-center">
-        <% if (!login) { %>
-        <main class="form-signin">
-            <form id="loginForm" action="/login" method="POST">
-                <img
-                    class="mb-4"
-                    src="img/logo.svg"
-                    alt="logo"
-                    width="80"
-                    height="67"
-                />
-                <h1 class="h3 mb-3 fw-normal">Iniciar Sesion</h1>
-
-                <div class="form-floating">
-                    <input
-                        type="email"
-                        class="form-control"
-                        id="floatingInput"
-                        name="email"
-                        placeholder="email"
-                    />
-                    <label for="floatingInput">Correo electronico</label>
-                </div>
-                <div class="form-floating">
-                    <input
-                        type="password"
-                        class="form-control"
-                        id="floatingPassword"
-                        name="pass"
-                        placeholder="Password"
-                    />
-                    <label for="floatingPassword">Contraseña</label>
-                </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">
+                    <div class="form-floating">
+                        <input type="email" class="form-control" id="floatingInput" name="email" placeholder="email" />
+                        <label for="floatingInput">Correo electronico</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingPassword" name="pass" placeholder="Password" />
+                        <label for="floatingPassword">Contraseña</label>
+                    </div>
+                    <button class="w-100 btn btn-lg btn-primary" type="submit">
                     Iniciar Sesion
                 </button>
-                <a href="/register" type="button">Registrarse</a>
-                <hr />
-                <p>
-                    Si olvidaste tu contraseña has
-                    <a href="/forgot-pass">click aqui</a>
-                </p>
-            </form>
-        </main>
-        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <% if (alert) { %>
-        <script>
-            Swal.fire({
-                title: '<%=alertTitle%>',
-                text: '<%=alertMessage%>',
-                icon: '<%=alertIcon%>',
-                showConfirmButton: <%=showConfirmButton%>,
-                timer: <%=timer%>,
-            }).then(() => {
-                window.location = '/<%=ruta%>'
-            })
-        </script>
-        <% } %> <% }else{ %>
-        <script>
-            window.location = '/';
-        </script>
-        <%}%>
-    </body>
+                    <a href="/register" type="button">Registrarse</a>
+                    <hr />
+                    <p>
+                        Si olvidaste tu contraseña has
+                        <a href="/forgot-pass">click aqui</a>
+                    </p>
+                </form>
+            </main>
+            <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+            <% if (alert) { %>
+                <script>
+                    Swal.fire({
+                        title: '<%=alertTitle%>',
+                        text: '<%=alertMessage%>',
+                        icon: '<%=alertIcon%>',
+                        showConfirmButton: <%=showConfirmButton%>,
+                        timer: <%=timer%>,
+                    }).then(() => {
+                        window.location = '/<%=ruta%>'
+                    })
+                </script>
+                <% } %>
+                    <% }else{ %>
+                        <script>
+                            window.location = '/';
+                        </script>
+                        <%}%>
+</body>
+
 </html>
