--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,10 +1,3 @@
-<!--TODO header con un ancord (<a href="/login">Iniciar Sesion</a>)-->
-
-<!--TODO slider-->
-
-<!--TODO "Productos"-->
-
-<!--TODO footer-->
 <!DOCTYPE html>
 <html lang="es">
 
@@ -28,17 +21,18 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a
+                        <a class="nav-link active" aria-current="page" href="/">Home</a
                             >
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Multimedia</a>
                     </li>
-                    <li>
-                        <a class="dropdown-item" href="/products">Compra</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/products">Compra</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" <% if (login) { %>
+                        <a class="nav-link" 
+                        <% if (login) { %>
                             <a href="#">
                                 <%=username%>
                             </a>
@@ -47,13 +41,13 @@
                                     >
                                 </li>
 
-                                <% }else{ %>
+                        <% }else{ %>
                                 <a href="/login">Iniciar Sesion</a>
-                                <%}%>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/register">Registrarme</a>
+                                </li>
+                        <%}%>
                         </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/register">Registrarme</a>
                         </li>
                 </ul>
                 <form class="d-flex" role="search">
