--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,84 +1,148 @@
 <!DOCTYPE html>
 <html lang="es">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>PayTooWin</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+            crossorigin="anonymous"
+        />
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PayTooWin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-</head>
+    <body>
+        <% if (login) { %> 
+            <%-include('header',{login:login,username:username}); -%> 
+        <% }else{ %> 
+            <%-include('header',{login:login}); -%> 
+        <%}%>
 
-<body>
-    <% if (login) { %>
-        <%- include('header',{login:login,username:username}); -%>
-            <% }else{ %>
-                <%- include('header',{login:login}); -%>
-                    <%}%>
+        <div class="container">
+            <h1 class="border text-center">NOVEDADES</h1>
+        </div>
 
-                        <div class="container">
-                            <h1 class="border text-center">NOVEDADES</h1>
+        <div>
+            <div
+                id="carouselExampleCaptions"
+                class="carousel slide"
+                data-bs-ride="false"
+            >
+                <div class="carousel-indicators">
+                    <button
+                        type="button"
+                        data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide-to="0"
+                        class="active"
+                        aria-current="true"
+                        aria-label="Slide 1"
+                    ></button>
+                    <button
+                        type="button"
+                        data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide-to="1"
+                        aria-label="Slide 2"
+                    ></button>
+                    <button
+                        type="button"
+                        data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide-to="2"
+                        aria-label="Slide 3"
+                    ></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img
+                            src="img/slider-1.jpg"
+                            class="d-block w-100"
+                            alt="banner-1"
+                            loading="lazy"
+                        />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>La batalla intergaláctica te espera</h5>
+                            <p>
+                                Ven y únete a la comunidad más grande de Dark
+                                Orbit en latinoamérica
+                            </p>
                         </div>
-
-                        <div>
-                            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-                                <div class="carousel-indicators">
-                                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                                </div>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img src="img/slider-1.jpg" class="d-block w-100" alt="banner-1" loading="lazy" />
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h5>La batalla intergaláctica te espera</h5>
-                                            <p>
-                                                Ven y únete a la comunidad más grande de Dark Orbit en latinoamérica
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="img/slider-3.jpg" class="d-block w-100" alt="banner-3" loading="lazy" />
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h5>Juga con más de 20.000 players de tu región</h5>
-                                            <p>Ingresa y busca lo que necesitas</p>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="img/slider-5.jpg" class="d-block w-100" alt="banner-5" loading="lazy" />
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h5>No te quedes atrás</h5>
-                                            <p>
-                                                Consigue naves y equipamentos desde la primer a la última temporada
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    </div>
+                    <div class="carousel-item">
+                        <img
+                            src="img/slider-3.jpg"
+                            class="d-block w-100"
+                            alt="banner-3"
+                            loading="lazy"
+                        />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Juga con más de 20.000 players de tu región</h5>
+                            <p>Ingresa y busca lo que necesitas</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img
+                            src="img/slider-5.jpg"
+                            class="d-block w-100"
+                            alt="banner-5"
+                            loading="lazy"
+                        />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>No te quedes atrás</h5>
+                            <p>
+                                Consigue naves y equipamentos desde la primer a
+                                la última temporada
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev"
+                >
                     <span
                         class="carousel-control-prev-icon"
                         aria-hidden="true"
                     ></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next"
+                >
                     <span
                         class="carousel-control-next-icon"
                         aria-hidden="true"
                     ></span>
                     <span class="visually-hidden">Next</span>
                 </button>
-                            </div>
-                        </div>
-                        <div class="container text-center d-flex justify-content-center align-items-center">
-                            <div class="card" style="width: 18rem">
-                                <img src="img/slider-2.jpg" class="card-img-top" alt="CanalYT" loading="lazy" />
-                                <div class="card-body">
-                                    <h5 class="card-title">YouTube Dark Orbit</h5>
-                                    <p class="card-text">
-                                        Contamos con nuestro propio canal de YouTube dedicado 100% a tu juego favorito Dark Orbit. ¡Ven y visítanos!
-                                    </p>
-                                    <a href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw" class="btn btn-danger" target="_blank">YouTube Oficial DO</a
+            </div>
+        </div>
+        <div
+            class="container text-center d-flex justify-content-center align-items-center"
+        >
+            <div class="card" style="width: 18rem">
+                <img
+                    src="img/slider-2.jpg"
+                    class="card-img-top"
+                    alt="CanalYT"
+                    loading="lazy"
+                />
+                <div class="card-body">
+                    <h5 class="card-title">YouTube Dark Orbit</h5>
+                    <p class="card-text">
+                        Contamos con nuestro propio canal de YouTube dedicado
+                        100% a tu juego favorito Dark Orbit. ¡Ven y visítanos!
+                    </p>
+                    <a
+                        href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw"
+                        class="btn btn-danger"
+                        target="_blank"
+                        >YouTube Oficial DO</a
                     >
                 </div>
             </div>
