--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Product</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product</title>
-</head>
-
-<body>
-
-    <h1>
-        <% if (login) { %>
-            <%- include('header',{login:login,username:username}); -%>
-                <% }else{ %>
-                    <%- include('header',{login:login}); -%>
-                        <%}%>
-                            <%= name %>
-    </h1>
-    <h1>
-        <%=sku %>
-    </h1>
-    <h1>
-        <%=description%>
-    </h1>
-    <h1></h1>
-    <h1></h1>
-</body>
-
+    <body>
+        <% if (login) { %> 
+            <%-include('header',{login:login,username:username}); -%> 
+        <% }else{ %>
+            <%- include('header',{login:login}); -%> 
+        <%}%>
+        <h1><%=sku %></h1>
+        <h1><%=description%></h1>
+        <h1></h1>
+        <h1></h1>
+    </body>
 </html>
