add cart table and add button to add cart

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -21,6 +21,7 @@
         <%}%>
         <h1><%=sku %></h1>
         <h1><%=description%></h1>
+        <a href="/add-to-cart?sku=<%=sku%>" class="btn btn-success">Añadir al carrito</a>
         <%- include ('footer'); -%>
     </body>
 </html>
