--- a/views/products.ejs
+++ b/views/products.ejs
@@ -24,7 +24,7 @@
         </a>
 
         <div class="row container-fluid">
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title"><%=packet.name%></h5>
@@ -32,7 +32,7 @@
                             <%=packet.description%>
                         </p>
                         <p class "card-text">
-                            <%=packet.price%>
+                            $<%=packet.price%>
                         </p>
                         
                         <a href="#" class="btn btn-primary">Comprar</a>
