--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,11 +21,12 @@
                         >Home</a
                     >
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Multimedia</a>
-                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" href="/products">Compra</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/carrito-compras">Carrito</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" <% if (login) { %>
@@ -42,7 +43,9 @@
                         <%}%>
                     </a>
                 </li>
+               
             </ul>
+            
             <form class="d-flex" role="search">
                 <input
                     class="form-control me-2"
