Mejora del header en vista inicio sesion y compra

--- a/views/forgot-pass.ejs
+++ b/views/forgot-pass.ejs
@@ -24,7 +24,7 @@
         <link href="css/signin.css" rel="stylesheet" />
     </head>
     <body class="text-center">
-        <% if (!login) { %>
+        <% if (!login) { %> <%- include('header',{login:login}); -%>
             <main class="form-signin">
                 <form id="forgotPassForm" action="/forgot-pass" method="POST" >
                     <img
