--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,7 @@
 <nav id="Header" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
-            <img src="img/logo.svg" alt="logo" width="150px" />
+            <img src="../img/logo.svg" alt="logo" width="150px" />
         </a>
         <button
             class="navbar-toggler"
