--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -3,23 +3,19 @@ body {
   height: 100%;
 }
 
-body {
-  display: flex;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-}
+
 
 .form-signin {
   width: 100%;
   max-width: 330px;
   padding: 15px;
   margin: auto;
+  text-align: center;
 }
 
 .form-signin .checkbox {
   font-weight: 400;
+  text-align: center;
 }
 
 .form-signin .form-floating:focus-within {
@@ -37,3 +33,9 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.logo {
+   background-image: url('../img/logo.svg');
+}
+
+
