Se añadio el packet.sku para redirigir al producto

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -35,7 +35,7 @@
                             $<%=packet.price%>
                         </p>
                         
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="products/<%=packet.sku%>" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
