Actualizacion footer-carrito--agregaciones-H-F-TLV

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,7 @@
         <section class="mb-4">
             <a
                 class="btn btn-outline-light btn-floating m-1"
-                href="#!"
+                href="https://www.facebook.com/gaming/ignaciosapbe"
                 role="button"
                 ><i class="fab fa-facebook-f"></i
             ></a>
@@ -72,16 +72,16 @@
         </section>
         <section class="mb-4">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                distinctio earum repellat quaerat voluptatibus placeat nam,
-                commodi optio pariatur est quia magnam eum harum corrupti dicta,
-                aliquam sequi voluptate quas.
+                Para mayor información sobre nuestra empres, visita nuestras
+                redes sociales o comunícate con nosotros a través de los números
+                de contacto o nuestro formulario de atención al cliente.
+                Esteremos felíces de poder ayudarter!
             </p>
         </section>
         <section class="">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
+                    <h5 class="text-uppercase">Servicio al cliente</h5>
 
                     <ul class="list-unstyled mb-0">
                         <li>
@@ -99,7 +99,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
+                    <h5 class="text-uppercase">Nosotros</h5>
 
                     <ul class="list-unstyled mb-0">
                         <li>
@@ -117,7 +117,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
+                    <h5 class="text-uppercase">Administrativo</h5>
 
                     <ul class="list-unstyled mb-0">
                         <li>
@@ -135,7 +135,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
+                    <h5 class="text-uppercase">Reporta</h5>
 
                     <ul class="list-unstyled mb-0">
                         <li>
@@ -156,7 +156,7 @@
         </section>
     </div>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-        © 2020 Copyright:
+        © 2022 Copyright:
         <a class="text-white" href="https://mdbootstrap.com/">PayTooWin</a>
     </div>
 </footer>
