--- a/views/register.ejs
+++ b/views/register.ejs
@@ -103,5 +103,6 @@
             window.location = '/';
         </script>
         <%}%>
+        <%- include ('footer'); -%> 
     </body>
 </html>
