--- a/views/carrito-compras.ejs
+++ b/views/carrito-compras.ejs
@@ -1,67 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>PayTooWin</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="css/index.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PayTooWin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/index.css" />
-</head>
+    <body>
+        <% if (login) { %> <%-include('header',{login:login,username:username});
+        -%> <% }else{ %> <%-include('header',{login:login}); -%> <%}%>
+        <div
+            class="row container-fluid"
+            style="margin-left: 8px; margin-top: 7px; margin-bottom: 7px"
+        >
+            <ol class="list-group list-group-numbered">
+                <li
+                    class="list-group-item d-flex justify-content-between align-items-start"
+                >
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold">Cuenta Nave Tridimensional</div>
+                        Nivel 41
+                    </div>
+                    <div style="padding-inline: 50px;">
+                        <div class="card" style="width: 9rem">
+                        <img
+                            src="img/slider-6.jpg"
+                            class="card-img-top"
+                            loading="lazy"
+                        />
+                    </div>
+                    </div>
+                    
 
-<body>
-    <% if (login) { %>
-        <%-include('header',{login:login,username:username});
-        -%>
-            <% }else{ %>
-                <%-include('header',{login:login}); -%>
-                    <%}%>
+                    <div style="padding: 50px;">
+                        <button type="button" class="btn btn-danger">
+                            Eliminar
+                        </button>
+                    </div>
+                </li>
 
-                        <ol class="list-group list-group-numbered">
-                            <li class="list-group-item d-flex justify-content-between align-items-start">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Cuenta Naves Interplatanarias</div>
-                                    Diversos niveles
-                                </div>
-                                <div class="card" style="width: 10rem">
-                                    <img src="img/slider-6.jpg" class="card-img-top" loading="lazy" />
-                                </div>
-                                <button type="button" class="btn btn-danger">Eliminar</button>
-                            </li>
+                <li
+                    class="list-group-item d-flex justify-content-between align-items-start"
+                >
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold">Cuenta Nave Vía Láctea</div>
+                        Nivel 451
+                    </div>
+                    <div style="padding-inline: 50px;">
+                        <div class="card" style="width: 9rem">
+                        <img
+                            src="img/slider-6.jpg"
+                            class="card-img-top"
+                            loading="lazy"
+                        />
+                    </div>
+                    </div>
+                    
 
-                            <li class="list-group-item d-flex justify-content-between align-items-start">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Cuenta Nave Vía Láctea</div>
-                                    Nivel 451
-                                </div>
-                                <div class="card" style="width: 10rem">
-                                    <img src="img/slider-6.jpg" class="card-img-top" loading="lazy" />
-                                </div>
+                    <div style="padding: 50px;">
+                        <button type="button" class="btn btn-danger">
+                            Eliminar
+                        </button>
+                    </div>
+                </li>
+                <li
+                    class="list-group-item d-flex justify-content-between align-items-start"
+                >
+                    <div class="ms-2 me-auto">
+                        <div class="fw-bold">Cuenta Nave Estelar</div>
+                        Nivel 1602
+                    </div>
+                    <div style="padding-inline: 50px;">
+                        <div class="card" style="width: 9rem">
+                        <img
+                            src="img/slider-6.jpg"
+                            class="card-img-top"
+                            loading="lazy"
+                        />
+                    </div>
+                    </div>
+                    
 
-                                <button type="button" class="btn btn-danger">Eliminar</button>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-start">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Cuwnta Sol Naciente</div>
-                                    Nivel 999
-                                </div>
-                                <div class="card" style="width: 10rem">
-                                    <img src="img/slider-6.jpg" class="card-img-top" loading="lazy" />
-                                </div>
-                                <button type="button" class="btn btn-danger">Eliminar</button>
-                            </li>
-                        </ol>
+                    <div style="padding: 50px;">
+                        <button type="button" class="btn btn-danger">
+                            Eliminar
+                        </button>
+                    </div>
+                </li>
+            </ol>
+        </div>
+        <div class="d-grid gap-2 col-3 mx-auto" style="margin-top:8px; margin-bottom: 8px;">
+            <button class="btn btn-danger" type="button">Vaciar Carrito</button>
+            <button class="btn btn-primary" type="button">Comprar</button>
+        </div>
 
-                        <div class="d-grid gap-2 col-6 mx-auto">
-                            <button class="btn btn-primary" type="button">
-                Vaciar Carrito
-            </button>
-                            <button class="btn btn-primary" type="button">Comprar</button>
-                        </div>
-
-                        <%-include ('footer'); -%>
-                            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
-
+        <%-include ('footer'); -%>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
