--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,8 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Login</title>
         <link href="css/bootstrap.min.css" rel="stylesheet" />
-        
-        
 
         <style>
             .bd-placeholder-img {
@@ -24,59 +22,55 @@
             }
         </style>
         <link href="css/signin.css" rel="stylesheet" />
-        
     </head>
-   
+
     <body>
         <% if (!login) { %> <%- include('header',{login:login}); -%>
 
-        <div >
-        <main class="form-signin">
-          
-            <form id="loginForm" action="/login" method="POST">
-                <img
-                    class="mb-4"
-                    src="img/logo.svg"
-                    alt="logo"
-                    width="80"
-                    height="67"
-                />
-                <h1 class="h3 mb-3 fw-normal">Iniciar Sesion</h1>
+        <div>
+            <main class="form-signin">
+                <form id="loginForm" action="/login" method="POST">
+                    <img
+                        class="mb-4"
+                        src="img/logo.svg"
+                        alt="logo"
+                        width="80"
+                        height="67"
+                    />
+                    <h1 class="h3 mb-3 fw-normal">Iniciar Sesion</h1>
 
-                <div class="form-floating">
-                    <input
-                        type="email"
-                        class="form-control"
-                        id="floatingInput"
-                        name="email"
-                        placeholder="email"
-                    />
-                    <label for="floatingInput">Correo electronico</label>
-                </div>
-                <div class="form-floating">
-                    <input
-                        type="password"
-                        class="form-control"
-                        id="floatingPassword"
-                        name="pass"
-                        placeholder="Password"
-                    />
-                    <label for="floatingPassword">Contraseña</label>
-                </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">
-                    Iniciar Sesion
-                </button>
-                <a href="/register" type="button">Registrarse</a>
-                <hr />
-                <p>
-                    Si olvidaste tu contraseña has
-                    <a href="/forgot-pass">click aqui</a>
-                </p>
-            </form>
-        
-        
-        </main>
-    </div>
+                    <div class="form-floating">
+                        <input
+                            type="email"
+                            class="form-control"
+                            id="floatingInput"
+                            name="email"
+                            placeholder="email"
+                        />
+                        <label for="floatingInput">Correo electronico</label>
+                    </div>
+                    <div class="form-floating">
+                        <input
+                            type="password"
+                            class="form-control"
+                            id="floatingPassword"
+                            name="pass"
+                            placeholder="Password"
+                        />
+                        <label for="floatingPassword">Contraseña</label>
+                    </div>
+                    <button class="w-100 btn btn-lg btn-primary" type="submit">
+                        Iniciar Sesion
+                    </button>
+                    <a href="/register" type="button">Registrarse</a>
+                    <hr />
+                    <p>
+                        Si olvidaste tu contraseña has
+                        <a href="/forgot-pass">click aqui</a>
+                    </p>
+                </form>
+            </main>
+        </div>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <% if (alert) { %>
         <script>
@@ -95,5 +89,6 @@
             window.location = '/';
         </script>
         <%}%>
+        <%- include ('footer'); -%> 
     </body>
 </html>
