Actualizacion vista addProduct

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -29,6 +29,9 @@
                     <a class="nav-link" href="/carrito-compras">Carrito</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/addProduct">Añadir Producto</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" <% if (login) { %>
                         <a href="#"> <%=username%> </a>
                         <li class="nav-item">
