--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>addProduct</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+            crossorigin="anonymous"
+        />
+        <style>
+            .bd-placeholder-img {
+                font-size: 1.125rem;
+                text-anchor: middle;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                user-select: none;
+            }
+
+            @media (min-width: 768px) {
+                .bd-placeholder-img-lg {
+                    font-size: 3.5rem;
+                }
+            }
+        </style>
+        <link href="css/signin.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -22,7 +44,7 @@
                     width="80"
                     height="67"
                 />
-                <h1 class="h3 mb-3 fw-normal">SKU</h1>
+                <h1 class="h3 mb-3 fw-normal">Añadir Producto</h1>
                 <div class="form-floating">
                     <input
                         type="number"
@@ -64,9 +86,12 @@
                     />
                     <label for="floatingPassword">Precio</label>
                 </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">
+                <div style="padding: 12px">
+                    <button class="w-100 btn btn-lg btn-primary" type="submit">
                     Agregar Producto
                 </button>
+                </div>
+                
             </form>
         </main>
         <%- include ('footer'); -%>
